--- a/dev/pages/about/about.pug
+++ b/dev/pages/about/about.pug
@@ -6,71 +6,32 @@ block content
         include ../../components/header/header
         .container
             section.about
-                .about__left
-                    .triangle.tringle_fill_white.about__left-triangle
-                    .about__left-title
-                        .block-title Обо мне
-                    .about__left-content
-                        .user-description
-                            .user-description__image
-                                img.user-description__avatar
-                            .user-description__title
-                                .block-subtitle Кто я
-                            .user-description__text.text-content
-                                p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-                                p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите,как тут всё классно и красиво!
-                .about__right
-                    .triangle.tringle_fill_beige.about__right-triangle
-                    .about__right-title
-                        .block-subtitle Чем я могу быть вам полезен
-                    .about__right-text.text-content
-                        p Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
-                    .about__right-content
-                        ul.skills-list
-                            each item in ['Frontend', 'Backend', 'Workflow']
-                                li.skills-list__item
-                                    .skills-row
-                                        .skills-row__title #{item}
-                                        ul.skills-row__list
-                                            each skill in ['Html5', 'css3', 'JavaScript']
-                                                li.skills-row__item
-                                                    .skill
-                                                        svg.skill__circle
-                                                        .skill__title #{skill}
-            section.section.map
-                .google-map
-                .map__contacts
-                    .contacts
-                        .contacts__title
-                            .block-subtitle Контакты
-                        ul.contacts__list
-                            -
-                                var contacts = [
-                                ['skype', 'skype_kdn'],
-                                ['mail', 'astahov@gmail.com'],
-                                ['phone', '+79211 123 23 23'],
-                                ['mark', 'Новосибирск'],
-                                ]
-                            each contact in contacts
-                                li.contacts__item
-                                    .contacts-row
-                                        .contacts-row__icon #{contact[0]}
-                                        .contacts-row__content #{contact[1]}
-                footer.map__footer.footer
-                    .footer__row
-                        .container
-                            .footer__col.footer__col-left
-                                nav.menu
-                            .footer__col.footer__col-right
-                                ul.socials.socials_rounded
-                                    each item in ['vk', 'fb', 'in']
-                                        li.socials__item
-                                            a(href="" class=`socials__item socials__item_${item}`)
-                    .footer__row
-                        .container
-                            .footer__col.footer__col-left
-                                .footer__text
-                                    p Я веб-разработчик из Новосибирска, и этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
-                            .footer__col.footer__col-right
-                                .footer__text.footer__text_margin_top
-        p Я веб-разработчик из Новосибирска, и этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
+                div.about__text
+                    div.headeing Обо мне
+                    img.persone__photo
+                    div.subtitle Кто я
+                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci commodi consectetur consequatur eos ex facilis, fugiat magnam molestias nesciunt nisi numquam optio pariatur quasi qui reiciendis repellendus veniam voluptas! Pariatur.
+                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci commodi consectetur consequatur eos ex facilis, fugiat magnam molestias nesciunt nisi numquam optio pariatur quasi qui reiciendis repellendus veniam voluptas! Pariatur.
+                div.about__skills
+                    div.subtitle lorem
+                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, blanditiis, corporis cupiditate debitis deleniti deserunt dolor dolore earum ipsum itaque maxime minima necessitatibus omnis quae quasi, sequi similique. Commodi, corporis.
+                    div.harakters
+                        .frontent
+                        .backend
+                        .WorkFolow
+            section.map
+                div.contacts
+                    div.map__section
+                    .subtitle lorem
+                     ul.contacts__list
+                         li.contacts__item
+                            a.contacts__link
+            section.footer
+                .footer__col-1
+                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur deleniti ipsum molestiae nemo neque nostrum, quas repudiandae sapiente vero. Animi culpa cupiditate, distinctio dolor excepturi expedita nulla ratione vero voluptatibus!
+                .footer__col-2
+                    .footer__nav
+                    .social__list
+                .footer__col-3
+                    .quote
+                .footer__bottom
