--- a/dev/pages/about/about.scss
+++ b/dev/pages/about/about.scss
@@ -1,3 +1,45 @@
 .about{
-  min-height: 600px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 15px 0 0 0;
 }
+
+.about__left, .about__right {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+
+.about{
+  &__left{
+    background: #ebefe2;
+  }
+
+  &__right{
+    background: #f4f5f0;
+  }
+}
+
+.about__bg{
+  position: absolute;
+  top: -7%;
+  .left-triangle{
+    fill: #ebefe2;
+  }
+  .right-triangle{
+    fill: #f4f5f0;
+  }
+}
+
+.about__left__col--left,.about__left__col--right{
+  display: flex;
+  justify-content: space-around;
+  width: 45%;
+}
+
+.about__text{
+  display: flex;
+  flex-direction: column;
+}
+
