Страница обо мне (40.3333%)

--- a/dev/pages/about/about.pug
+++ b/dev/pages/about/about.pug
@@ -15,7 +15,7 @@ block content
                     div.about__left__col--right
                         div.about__text
                             img(src=require("../../images/person__big.jpg"), class='big__photo')
-                            h2.normal__title Кто я
+                            h2.normal__title.about__title Кто я
                             p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci commodi consectetur consequatur eos ex facilis, fugiat magnam molestias nesciunt nisi numquam optio pariatur quasi qui reiciendis repellendus veniam voluptas! Pariatur.
                             p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci commodi consectetur consequatur eos ex facilis, fugiat magnam molestias nesciunt nisi numquam optio pariatur quasi qui reiciendis repellendus veniam voluptas! Pariatur.
                 div.about__right
