--- a/dev/common/main.scss
+++ b/dev/common/main.scss
@@ -29,6 +29,7 @@ $phones: 480px;
 @import '../components/social__list/social__list';
 @import '../components/persone/persone';
 @import '../components/header/header';
+@import '../components/footer/footer';
 @import '../components/arrow/arrow';
 
 //index
