--- a/dev/pages/about/about.pug
+++ b/dev/pages/about/about.pug
@@ -33,12 +33,4 @@ block content
                      ul.contacts__list
                          li.contacts__item
                             a.contacts__link
-            section.footer
-                .footer__col-1
-                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur deleniti ipsum molestiae nemo neque nostrum, quas repudiandae sapiente vero. Animi culpa cupiditate, distinctio dolor excepturi expedita nulla ratione vero voluptatibus!
-                .footer__col-2
-                    .footer__nav
-                    .social__list
-                .footer__col-3
-                    .quote
-                .footer__bottom
+        include ../../components/footer/_footer
