--- a/dev/pages/about/about.scss
+++ b/dev/pages/about/about.scss
@@ -5,6 +5,7 @@
 
   p{
     margin: 15px 0 0 0;
+    padding: 0 15px;
   }
 }
 
@@ -50,8 +51,4 @@
 
 .about__title{
   margin: 45px 0 0 0;
-}
-
-.about__right{
-
 }
