--- a/dev/pages/about/about.pug
+++ b/dev/pages/about/about.pug
@@ -29,6 +29,7 @@ block content
             section.map
                 div.contacts
                     div.map__section
+                        script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap')
                     h2.normal__title lorem
                      ul.contacts__list
                          li.contacts__item
