--- a/dev/pages/about/about.pug
+++ b/dev/pages/about/about.pug
@@ -28,8 +28,8 @@ block content
                         .WorkFolow
             section.map
                 div.contacts
-                    div.map__section
-                        script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap')
+                    div#map
+                        script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyC_CAeQUG0TIsrm45B2YViKvjJEz8zxZY0&callback=initMap', async defer)
                     h2.normal__title lorem
                      ul.contacts__list
                          li.contacts__item
