--- a/dev/common/main.scss
+++ b/dev/common/main.scss
@@ -31,6 +31,7 @@ $phones: 480px;
 @import '../components/header/header';
 @import '../components/footer/footer';
 @import '../components/arrow/arrow';
+@import '../components/map/map';
 
 //index
 @import '../pages/index/index';
