--- a/dev/pages/about/about.scss
+++ b/dev/pages/about/about.scss
@@ -53,8 +53,43 @@
   margin: 45px 0 0 0;
 }
 
-#map {
+.map{
+  position: relative;
   display: flex;
-  width: 100%;
-  height: 650px;
+  justify-content: center;
+  align-items: center;
+}
+
+.contacts{
+  position: absolute;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+  z-index: 10;
+  background: transparentize(#ebefe2, .2);
+  padding: 25px 45px;
+  border-radius: 5px;
+
+  &__item{
+    margin: 15px 0 0 0;
+    &:first-child{
+      margin: 0;
+    }
+  }
+
+  &__link{
+    display: flex;
+  }
+
+  &__icon{
+    overflow: visible;
+    fill: #4e8839;
+    width: 25px;
+    height: 25px;
+    margin: 0 15px 0 0;
+  }
+
+  &__title{
+    text-align: left;
+  }
 }
