--- a/dev/components/header/header.pug
+++ b/dev/components/header/header.pug
@@ -10,3 +10,6 @@ section.header
         include ../../components/persone/persone
     div.header__arrow__down
         include ../../components/arrow/arrow
+svg(viewBox="0 0 1000 85").header__triangle
+    polygon(points="0,0   0,86   500.8,86   500.8,75.5", class="left-triangle")
+    polygon(points="1000,0   1000,86   500,86   500,75.5", class="right-triangle")
