--- a/dev/pages/blog/blog.scss
+++ b/dev/pages/blog/blog.scss
@@ -1,3 +1,57 @@
-body{
-  background: #444455;
+.blog {
+  display: flex;
+  background: #f4f5f0;
+  &__col__left {
+    width: 20%;
+  }
+  &__col__right {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+  }
+
+  &__nav__item {
+    margin: 40px 0 0 0;
+    text-align: right;
+    .blog__nav__link {
+      color: #455a64;
+    }
+  }
+  &__nav__item--active {
+    font-weight: bold;
+    .blog__nav__link {
+      color: $green;
+      &:after {
+        content: '';
+        height: 80px;
+        border-right: 2px solid $green;
+        margin: 0 0 40px 0;
+      }
+    }
+  }
 }
+
+.article {
+  margin: 140px 0 0 0;
+  &:first-child {
+    margin: 0;
+  }
+
+  &__container {
+    width: 60%;
+    margin: auto;
+  }
+
+  &__data {
+    margin: 30px 0 0 0;
+    color: $green;
+  }
+  &__title {
+    font-size: 35px;
+    color: #455a64;
+  }
+  p {
+    margin: 30px 0 0 0;
+  }
+}
+
