--- a/dev/components/header/header.pug
+++ b/dev/components/header/header.pug
@@ -1,5 +1,6 @@
 include ../../common/mixin/mixin
-section.header
+section.header.paralax__effect--scroll(data-speed=
+"3")
     div.header__top
         div.header__social__block
             include ../../components/social__list/_social__list
