--- a/dev/pages/blog/blog.scss
+++ b/dev/pages/blog/blog.scss
@@ -1,6 +1,8 @@
 .blog {
   display: flex;
   background: #f4f5f0;
+  align-items: baseline;
+  padding: 40px 0;
   &__col__left {
     width: 20%;
   }
@@ -13,21 +15,27 @@
   &__nav__item {
     margin: 40px 0 0 0;
     text-align: right;
+    &:first-child{
+      margin: 0;
+    }
     .blog__nav__link {
       color: #455a64;
     }
   }
   &__nav__item--active {
     font-weight: bold;
-    .blog__nav__link {
-      color: $green;
-      &:after {
-        content: '';
-        height: 80px;
-        border-right: 2px solid $green;
-        margin: 0 0 40px 0;
-      }
+    &:after{
+      content: "";
+      position: absolute;
+      border-right: 3px solid #4e8839;
+      margin: 0 0 0 30px;
+      height: 50px;
+      transform: translate(0,-30%);
     }
+    .blog__nav__link{
+    color: $green;
+    }
+
   }
 }
 
@@ -40,6 +48,14 @@
   &__container {
     width: 60%;
     margin: auto;
+    &:after{
+      content: '';
+      position: absolute;
+      border-bottom: 4px solid #455a64;
+      opacity: .4;
+      width: 30%;
+      margin: 70px 0 0;
+    }
   }
 
   &__data {
