--- a/dev/pages/index/index.pug
+++ b/dev/pages/index/index.pug
@@ -4,6 +4,7 @@ block head
     title welcome page
 block content
     section.welcome__page
+        canvas.Background-canvas
         div.wrap
             div.welcome__page--container
                 div.welcome__page--header
