--- a/dev/pages/index/index.pug
+++ b/dev/pages/index/index.pug
@@ -5,13 +5,19 @@ block head
 block content
     section.welcome__page
         canvas.Background-canvas
-        div.wrap
+        div.wrap__welcome__page
             div.welcome__page--container
                 div.welcome__page--header
-                    + link('#', 'Авторизоваться')(class='btn')
+                    + link('login__form.html', 'Авторизоваться')(class='btn', href='login__form.html')
                 div.welcome__form
                     include ../../components/persone/persone
                     include ../../components/social__list/_social__list
-                    + list('form', 'Мои работы', 'Обо мне', 'Блог')
+                    ul.form__list
+                        li.form__item
+                            a.form__link(href='works.html') Мои работы
+                        li.form__item
+                            a.form__link(href='about.html') Обо мне
+                        li.form__item
+                            a.form__link(href='blog.html') Блог
                 div.welcome__page--footer
                     p &copy; Владимир Астахов | создано с любовью в LoftSchool | 2016
