--- a/dev/pages/index/index.scss
+++ b/dev/pages/index/index.scss
@@ -35,6 +35,21 @@
   border-radius: 10px;
 }
 
+.wrap__welcome__page{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.Background-canvas{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .welcome__page--footer{
   color: $white;
   text-align: center;
