--- a/dev/common/main.scss
+++ b/dev/common/main.scss
@@ -38,6 +38,7 @@ $phones: 480px;
 @import '../pages/blog/blog';
 @import '../pages/works/works';
 @import '../pages/about/about';
+@import '../pages/index/login__form/login__form';
 
 //layout
 @import 'layout/tag_reset';
