--- a/dev/pages/blog/blog.pug
+++ b/dev/pages/blog/blog.pug
@@ -15,7 +15,7 @@ block content
             div.header__persone.header__blog
                 div.persone
                     img(src=require("../../images/person.jpg"), class='presone__img')
-                    h1.big__title.title__blog Блог
+                    h1.big__title.normal__title--white Блог
                     p.prersone__subtitle Статьи которые я написал
         svg(viewBox="0 0 1000 85").header__triangle
             polygon(points="0,0   0,86   500.8,86   500.8,75.5", class="left-triangle left-triangle-standart")
