--- a/dev/pages/works/works.pug
+++ b/dev/pages/works/works.pug
@@ -5,30 +5,31 @@ block content
     .wrap
         include ../../components/header/header
             section.works
-                h1.big__title Мои работы
-                div.slider
-                    div.slider__lief
-                        h2.normal__title Lorem ipsum dolor sit
-                        p Lorem ipsum dolor
-                        a.btn(href='#') Посмотреть сайт
-                    div.slider__right
-                        div.slider__screen
-                            img.slider__img__big(src='../../images/slide_img.png')
-                        div.slider__right__control
-                            div.slider__prev
-                                div.arrow
-                                img.slider__img__small(src='../../images/slide_img.png')
-                            div.slider__nex
-                                div.arrow
-                                img.slider__img__small(src='../../images/slide_img.png')
+                .works__header
+                    h1.big__title Мои работы
+            div.slider
+                div.slider__lief
+                    h2.normal__title Lorem ipsum dolor sit
+                    p Lorem ipsum dolor
+                    a.btn.btn--margin.btn--color(href='#') Посмотреть сайт
+                div.slider__right
+                    div.slider__screen
+                        img.slider__img__big(src=require('../../images/slide_img.png'))
+                    div.slider__right__control
+                        div.slider__btn.slider__prev
+                            a.slider__arrow(href='#')
+                            img.slider__img__small(src=require('../../images/slide_img.png'))
+                        div.slider__btn.slider__nex
+                            a.slider__arrow.slider__arrow--down(href='#')
+                            img.slider__img__small(src=require('../../images/slide_img.png'))
             section.reviews
                 div.reviews__block
                     div.reviews__left
-                        img.persone(src='../../images/slide_img.png')
+                        img.persone(src=require('../../images/person_2.jpg'))
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid, consequuntur dolor dolores, expedita impedit
                         span Lorem Lorem - loooorem Loftshool
                     div.reviews__right
-                        img.persone(src='../../images/slide_img.png')
+                        img.persone(src=require('../../images/person_3.jpg'))
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid, consequuntur dolor dolores, expedita impedit
                         span Lorem LoremLorem - loooorem
                 form.teg__form(method='post', action='mail.php')
