--- a/dev/pages/works/works.scss
+++ b/dev/pages/works/works.scss
@@ -78,3 +78,93 @@
 .slider__img__small{
   width: 50%;
 }
+
+.reviews{
+  display: flex;
+  flex-direction: column;
+  background: url($bg2) no-repeat;
+  background-size: cover;
+}
+
+.reviews__block{
+  display: flex;
+}
+
+.reviews__coment{
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+
+  p{
+    margin: 20px 0 0 0;
+    width: 50%;
+  }
+
+  span{
+    color: $green;
+    margin: 20px 0 0 0;
+  }
+}
+
+.contact__form{
+  background: transparentize($dark, .3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 380px;
+  height: 395px;
+  overflow: hidden;
+  border-radius: 10px;
+  margin: auto;
+}
+
+.contact__form__content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.contact__form__block{
+  display: flex;
+  padding: 0 20px;
+  margin: 20px 0 0 0;
+  &:first-child{
+    margin: 0;
+  }
+}
+
+.form__list--whidth,
+.form__item--whidth,
+.form__link--center{
+  width: 100%;
+}
+.form__link--center{
+  text-align: center;
+}
+
+.contact__form__input{
+  height: 45px;
+  width: 300px;
+  border-radius: 30px;
+  border:0;
+  padding: 5px 15px;
+}
+
+.contact__form__icon{
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 30px 0 0 30px;
+  background-color: #f0efe9;
+}
+
+.contact__form__buttons{
+  margin: 20px 0 0 0;
+}
+
+.contact__form__container{
+  display: flex;
+  justify-content: center;
+}
