--- a/dev/pages/works/works.pug
+++ b/dev/pages/works/works.pug
@@ -33,22 +33,20 @@ block content
                         img.presone__img(src=require('../../images/person_3.jpg'))
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid, consequuntur dolor dolores, expedita impedit
                         span Lorem LoremLorem - loooorem
-                form(method='post', action='mail.php')
+                form.form__teg(method='post', action='mail.php')
                     div.contact__form
                         div.normal__title.normal__title--white.normal__title--margin Напишите мне
                         div.contact__form__content
                             label.contact__form__block(for='user_name')
-                                input#user_name.contact__form__input(type='text', name='user_name', required='')
+                                input#user_name.contact__form__input(type='text', name='user_name',placeholder='Имя', required)
                             label.contact__form__block(for='user_pass')
-                                input#user_pass.contact__form__input(type='password', name='user_pass', required='')
-                            div.contact__form__row
-                                div.contact__form__container
-                                    div.contact__form__radio
-                                        input#human.form__radio-elem(type='checkbox', name='human', value='Да')
-                                        label.form__block-title(id='human', for='human') Я человек
-                        ul.form__list.form__list--whidth
-                            li.form__item.form__item--whidth
-                                a.form__link.form__link--center(href='index.html') На главную
-                            li.form__item.form__item--whidth
-                                a.form__link.form__link--center(href='#') Войти
+                                input#user_email.contact__form__input(type='email', name='user_pass',placeholder='Email', required)
+                            div.form__row
+                                textarea#user_message.contact__form__texarea(name='user_message', placeholder='Ваше сообщение')
+                        div.form__row
+                            div.form__control
+                                button.form__btn(type='submit')
+                                    div.form__submit-text Отправить
+                                button.form__btn(type='reset')
+                                    div.form__link.form__link--center Очистить
         include ../../components/footer/_footer
