--- a/dev/pages/works/works.scss
+++ b/dev/pages/works/works.scss
@@ -113,7 +113,7 @@
   align-items: center;
   justify-content: space-between;
   width: 380px;
-  height: 395px;
+  height: 100%;
   overflow: hidden;
   border-radius: 10px;
   margin: auto;
@@ -152,14 +152,6 @@
   padding: 5px 15px;
 }
 
-.contact__form__icon{
-  position: relative;
-  width: 45px;
-  height: 45px;
-  border-radius: 30px 0 0 30px;
-  background-color: #f0efe9;
-}
-
 .contact__form__buttons{
   margin: 20px 0 0 0;
 }
@@ -167,4 +159,41 @@
 .contact__form__container{
   display: flex;
   justify-content: center;
+}
+
+.form__row{
+  width: 100%;
+  margin: 20px 0 0 0;
+}
+
+.form__control{
+  display: flex;
+}
+
+.form__btn{
+  color: #fff;
+  white-space: nowrap;
+  background-color: #4e8839;
+  border: none;
+  text-align: center;
+  width: 100%;
+  border-right: 1px solid;
+  &:last-child{
+    border: 0;
+  }
+}
+
+.contact__form__texarea{
+  min-height: 150px;
+  max-height: 245px;
+  height: 150px;
+  width: 90%;
+  min-width: 90%;
+  max-width: 90%;
+  border-radius: 30px;
+  border: 0;
+  padding: 20px 15px;
+  margin: auto;
+  display: flex;
+  resize: none;
 }
